--- a/src/html/index.html
+++ b/src/html/index.html
@@ -2,9 +2,7 @@
 <html lang="ru">
 
 @@include('partials/head.html', {
-    "description": "",
-    "keywords": "",
-    "title": "Главная",
+    "title": "Главная"
 })
 
 <body>
@@ -53,7 +51,7 @@
                             <div class="card card-hero-info">
                                 <div class="card-body">
                                     <div>
-                                        <h1 class="hero-title">Digital-продукты для бизнеса: эффективная стратегия под отрасль</h1>
+                                        <h1 class="hero-title">Digital-продукты для бизнеса: эффективная стратегия<br> под отрасль</h1>
                                         <div class="d-flex gap-2">
                                             <span class="me-1">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 36 36" fill="none">
