--- a/src/html/index.html
+++ b/src/html/index.html
@@ -86,6 +86,10 @@
                 </div>
             </div>
         </div>
+    </section>
+    
+    <!-- section-clients-slider -->
+    <section class="section section-clients-slider">
         <div class="bg-white">
             <div class="swiper swiperClients">
                 <div class="swiper-wrapper">
@@ -213,10 +217,6 @@
             </div>
         </div>
     </section>
-
-    <!-- section-clients-slider -->
-    <!-- <section class="section section-clients-slider">
-    </section> -->
 
     <!-- section-services-grid -->
     <section class="section section-services-grid">
