--- a/src/html/index.html
+++ b/src/html/index.html
@@ -419,14 +419,69 @@
     </section>
 
     <!-- section-tariffs -->
-    <!-- <section class="section-tariffs">
+    <section class="section section-tariffs">
         <div class="container-fluid">
-
+            <!-- title -->
+            <div class="d-flex justify-content-between mb-15 mb-lg-40">
+                <h2 class="h2 mb-0">Тарифы под&nbsp;ваш&nbsp;бизнес и&nbsp;цели</h2>
+                <div class="d-flex align-items-center gap-10">
+                    <a href="#" class="btn btn-outline-black btn-l btn-animated">
+                        <div class="animated-content">
+                            <div class="animated-content__default">
+                                <span>Все&nbsp;услуги</span>
+                                <span>
+                                    <svg width="14" height="14">
+                                        <use xlink:href="img/sprite.svg#btn-arrow-up"></use>
+                                    </svg>
+                                </span>
+                            </div>
+                            <div class="animated-content__hidden">
+                                <span>Все&nbsp;услуги</span>
+                                <span>
+                                    <svg width="14" height="14">
+                                        <use xlink:href="img/sprite.svg#btn-arrow-down"></use>
+                                    </svg>
+                                </span>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <!-- grid -->
+            <div class="section-grid">
+                <div class="grid-col">
+                    <!-- card -->
+                    @@include('partials/card-tariff-plan.html', {
+                        "id": "1",
+                        "title": "«Разработка сайтов»",
+                        "subtitle": "Для начинающих",
+                        "price": "66 000 ₽"
+                    })
+                </div>
+                <div class="grid-col">
+                    <!-- card -->
+                    @@include('partials/card-tariff-plan.html', {
+                        "id": "2",
+                        "title": "«SEO-продвижение»",
+                        "subtitle": "Для развития бизнеса",
+                        "price": "100 200 ₽"
+                    })
+                </div>
+                <div class="grid-col">
+                    <!-- card -->
+                    @@include('partials/card-tariff-plan.html', {
+                        "id": "3",
+                        "title": "«Интернет-магазин»",
+                        "subtitle": "Для увеличения продаж",
+                        "price": "144 000 ₽"
+                    })
+                </div>
+            </div>
         </div>
-    </section> -->
+    </section>
 
     <!-- section-partners-slider -->
-    <section class="section-partners-slider">
+    <section class="section section-partners-slider">
         <div class="container-fluid">
             <div class="mb-20 mb-lg-40">
                 <div style="max-width: 630px;">
@@ -523,11 +578,11 @@
     </section>
 
     <!-- section-reviews-slider -->
-    <section class="section-reviews-slider">
+    <section class="section section-reviews-slider">
         <div class="container-fluid">
             <!-- title -->
             <div class="d-flex align-items-center justify-content-between mb-15 mb-lg-40">
-                <h2 class="h2 mb-0">Отзывы и благодарности</h2>
+                <h2 class="h2 mb-0">Отзывы и&nbsp;благодарности</h2>
                 <div class="d-flex align-items-center gap-10">
                     <button type="button" class="btn btn-outline-black btn-icon-l btn-swiper-left">
                         <span>
@@ -600,11 +655,11 @@
     </section>
 
     <!-- section-blog-slider -->
-    <section class="section-blog-slider">
+    <section class="section section-blog-slider">
         <div class="container-fluid">
             <!-- title -->
             <div class="d-flex align-items-center justify-content-between mb-15 mb-lg-40">
-                <h2 class="h2 mb-0">Статьи и новости</h2>
+                <h2 class="h2 mb-0">Статьи и&nbsp;новости</h2>
                 <div class="d-flex align-items-center gap-10">
                     <button type="button" class="btn btn-outline-black btn-icon-l btn-swiper-left">
                         <span>
@@ -696,17 +751,17 @@
         </div>
     </section>
 
-    <!-- section-faq -->
-    <section class="section section-faq">
+    <!-- section-faq-accordion -->
+    <section class="section section-faq-accordion">
         <div class="container-fluid">
             <!-- title -->
             <div class="d-flex justify-content-between mb-15 mb-lg-40">
-                <h2 class="h2 mb-0">Вопросы и ответы</h2>
+                <h2 class="h2 mb-0">Вопросы и&nbsp;ответы</h2>
                 <div class="d-flex align-items-center gap-10">
                     <a href="#" class="btn btn-outline-black btn-l btn-animated">
                         <div class="animated-content">
                             <div class="animated-content__default">
-                                <span>Написать в поддержку</span>
+                                <span>Написать в&nbsp;поддержку</span>
                                 <span>
                                     <svg width="14" height="14">
                                         <use xlink:href="img/sprite.svg#btn-arrow-up"></use>
@@ -714,7 +769,7 @@
                                 </span>
                             </div>
                             <div class="animated-content__hidden">
-                                <span>Написать в поддержку</span>
+                                <span>Написать в&nbsp;поддержку</span>
                                 <span>
                                     <svg width="14" height="14">
                                         <use xlink:href="img/sprite.svg#btn-arrow-down"></use>
