--- a/src/html/index.html
+++ b/src/html/index.html
@@ -744,7 +744,7 @@
                         })
                     </div>
                 </div>
-                <div class="swiper-pagination"></div>
+                <div class="swiper-pagination pagination-static"></div>
             </div>
 
         </div>
@@ -846,7 +846,7 @@
                         })
                     </div>
                 </div>
-                <div class="swiper-pagination"></div>
+                <div class="swiper-pagination pagination-static"></div>
             </div>
 
             <!-- section-blog-slider__btn-wrp -->
