--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,6 +1,6 @@
 @@include('partials/header.html', {
     "title": "Главная",
-    "headerAbsolute": "true"
+    "headerAbsolute": true
 })
 
 <!-- main -->
