--- a/src/html/services.html
+++ b/src/html/services.html
@@ -7,10 +7,10 @@
 <main class="main">
 
     <!-- section -->
-    <section class="section">
+    <section class="section mb-15 mb-md-20 mb-xxl-30">
         <div class="container-fluid">
             <!-- wrapper -->
-            <div class="rounded-3 p-15 p-xl-40 p-xxl-50 bg-white mb-15 mb-md-20 mb-xxl-30">
+            <div class="white-rounded-wrapper">
 
                 <!-- breadcrumb -->
                 <nav aria-label="breadcrumb">
@@ -25,19 +25,17 @@
                 </nav>
 
                 <!-- heading -->
-                <div class="heading mb-40 mb-xl-60">
-                    <div class="row">
-                        <div class="col-xl-7 col-xxl-9">
-                            <div class="h1 mb-0">От&nbsp;разработки и&nbsp;исследований до&nbsp;продвижения и&nbsp;сквозной аналитики</div>
-                        </div>
-                    </div>
+                <div class="section__heading mb-40 mb-xl-60">
+                    <div class="section__title h1 mb-10" style="max-width: 1100px;">От&nbsp;разработки и&nbsp;исследований до&nbsp;продвижения и&nbsp;сквозной аналитики</div>
                 </div>
 
                 <!-- content -->
                 <div class="content">
-                    <div class="row gy-40 gy-xl-60">
+
+                    <!-- grid -->
+                    <div class="services-widgets-grid">
                         <!-- Разработка -->
-                        <div class="col-xl-6">
+                        <div class="service-widget">
                             <div class="h4 fw-medium text-primary border-bottom pb-20 mb-20">Разработка</div>
                             <div class="services-list">
                                 <a href="#" class="btn btn-outline-black btn-m">Корпоративный сайт</a>
@@ -48,7 +46,7 @@
                             </div>
                         </div>
                         <!-- Продвижение -->
-                        <div class="col-xl-6">
+                        <div class="service-widget">
                             <div class="h4 fw-medium text-primary border-bottom pb-20 mb-20">Продвижение</div>
                             <div class="services-list">
                                 <a href="#" class="btn btn-outline-black btn-m">SEO</a>
@@ -62,7 +60,7 @@
                             </div>
                         </div>
                         <!-- Платформы -->
-                        <div class="col-xl-6">
+                        <div class="service-widget">
                             <div class="h4 fw-medium text-primary border-bottom pb-20 mb-20">Платформы</div>
                             <div class="services-list">
                                 <a href="#" class="btn btn-outline-black btn-m">1С-Битрикс</a>
@@ -77,7 +75,7 @@
                             </div>
                         </div>
                         <!-- Дизайн -->
-                        <div class="col-xl-6">
+                        <div class="service-widget">
                             <div class="h4 fw-medium text-primary border-bottom pb-20 mb-20">Дизайн</div>
                             <div class="services-list">
                                 <a href="#" class="btn btn-outline-black btn-m">UX/UI</a>
@@ -89,7 +87,7 @@
                             </div>
                         </div>
                         <!-- Интеграции -->
-                        <div class="col-xl-6">
+                        <div class="service-widget">
                             <div class="h4 fw-medium text-primary border-bottom pb-20 mb-20">Интеграции</div>
                             <div class="services-list">
                                 <a href="#" class="btn btn-outline-black btn-m">Битрикс 24</a>
@@ -109,7 +107,7 @@
                             </div>
                         </div>
                         <!-- Поддержка сайтов -->
-                        <div class="col-xl-6">
+                        <div class="service-widget">
                             <div class="h4 fw-medium text-primary border-bottom pb-20 mb-20">Поддержка сайтов</div>
                             <div class="services-list">
                                 <a href="#" class="btn btn-outline-black btn-m">Поддержка сайтов</a>
@@ -117,6 +115,7 @@
                             </div>
                         </div>
                     </div>
+
                 </div>
 
             </div>
