--- a/src/html/services.html
+++ b/src/html/services.html
@@ -10,7 +10,7 @@
     <section class="section mb-15 mb-md-20 mb-xxl-30">
         <div class="container-fluid">
             <!-- wrapper -->
-            <div class="white-rounded-wrapper">
+            <div class="rounded-wrapper bg-white">
 
                 <!-- breadcrumb -->
                 <nav aria-label="breadcrumb">
